--- a/corelibrary/build.gradle
+++ b/corelibrary/build.gradle
@@ -8,8 +8,8 @@ android {
         multiDexEnabled true
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 18
-        versionName "1.0.18"
+        versionCode 19
+        versionName "1.0.19"
     }
     buildTypes {
         release {
@@ -62,7 +62,8 @@ dependencies {
     implementation files('libs/httpcore-4.4.3.jar')
     implementation files('libs/httpclient-4.5.1.jar')
 
-    implementation 'com.auth0.android:lock:2.2.1'
+    //implementation 'com.auth0.android:lock:2.2.1'
+    compile 'com.auth0.android:lock:2.11.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.auth0:java-jwt:2.1.0'
     implementation 'com.google.ads.interactivemedia.v3:interactivemedia:3.9.4'
