--- a/corelibrary/build.gradle
+++ b/corelibrary/build.gradle
@@ -8,8 +8,8 @@ android {
         multiDexEnabled true
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 19
-        versionName "1.0.19"
+        versionCode 20
+        versionName "1.0.20"
     }
     buildTypes {
         release {
@@ -63,7 +63,7 @@ dependencies {
     implementation files('libs/httpclient-4.5.1.jar')
 
     //implementation 'com.auth0.android:lock:2.2.1'
-    compile 'com.auth0.android:lock:2.11.1'
+    implementation 'com.auth0.android:lock:2.11.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.auth0:java-jwt:2.1.0'
     implementation 'com.google.ads.interactivemedia.v3:interactivemedia:3.9.4'
@@ -108,7 +108,7 @@ dependencies {
                 exclude group: 'com.android.support'
             }
     // Service Lib
-    implementation ('com.github.dotstudiopro:dotstudiopro-android-services:1.0.13')
+    implementation ('com.github.dotstudiopro:dotstudiopro-android-services:1.0.14')
             {
                 exclude group: 'com.android.support'
                 exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-model:1.0.6'
@@ -118,7 +118,7 @@ dependencies {
             {
                 exclude group: 'com.android.support'
                 exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-analytics:1.0.3'
-                exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-services:1.0.13'
+                exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-services:1.0.14'
                 exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-model:1.0.6'
             }
 
