--- a/corelibrary/build.gradle
+++ b/corelibrary/build.gradle
@@ -8,8 +8,8 @@ android {
         multiDexEnabled true
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 80
-        versionName "1.0.80"
+        versionCode 81
+        versionName "2.0.0"
     }
     buildTypes {
         release {
@@ -78,15 +78,11 @@ dependencies {
 
     implementation 'com.android.support:support-annotations:25.0.1'
 
-    //implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.google.firebase:firebase-messaging:17.3.3'
 
     implementation files('libs/aerserv-sdk.jar')
     implementation files('libs/adcolony.jar')
 
-    /*implementation 'com.android.support:appcompat-v7:23.1.1'
-    implementation 'com.android.support:design:23.1.1'
-    implementation 'com.android.support:support-v4:23.1.1'*/
     implementation 'com.android.support:appcompat-v7:26.0.2'
     implementation 'com.android.support:design:26.0.2'
     implementation 'com.android.support:appcompat-v7:26.0.2'
@@ -99,6 +95,16 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    implementation 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'// (v4.5)
+    implementation 'com.joanzapata.iconify:android-iconify-entypo:2.2.2'// (v3,2015)
+    implementation 'com.joanzapata.iconify:android-iconify-typicons:2.2.2'// (v2.0.7)
+    implementation 'com.joanzapata.iconify:android-iconify-material:2.2.2'// (v2.0.0)
+    implementation 'com.joanzapata.iconify:android-iconify-material-community:2.2.2'// (v1.4.57)
+    implementation 'com.joanzapata.iconify:android-iconify-meteocons:2.2.2'// (latest)
+    implementation 'com.joanzapata.iconify:android-iconify-weathericons:2.2.2'// (v2.0)
+    implementation 'com.joanzapata.iconify:android-iconify-simplelineicons:2.2.2'// (v1.0.0)
+    implementation 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2'// (v2.0.1)
 
     implementation ('com.github.dotstudiopro:dotstudiopro-android-model:1.0.13')
             {
@@ -115,13 +121,13 @@ dependencies {
                 exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-model:1.0.13'
             }
 
-    implementation ('com.github.dotstudiopro:dotstudiopro-android-player:1.0.43')
+    /*implementation ('com.github.dotstudiopro:dotstudiopro-android-player:1.0.43')
             {
                 exclude group: 'com.android.support'
                 exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-analytics:2.0.0'
                 exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-services:1.0.36'
                 exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-model:1.0.13'
-            }
+            }*/
 
 }
 configurations.all {
