--- a/corelibrary/build.gradle
+++ b/corelibrary/build.gradle
@@ -8,8 +8,8 @@ android {
         multiDexEnabled true
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 86
-        versionName "2.0.5"
+        versionCode 87
+        versionName "2.0.6"
     }
     buildTypes {
         release {
@@ -61,28 +61,9 @@ dependencies {
     implementation files('libs/httpmime-4.3.6.jar')
     implementation files('libs/httpcore-4.4.3.jar')
     implementation files('libs/httpclient-4.5.1.jar')
-
-    //implementation 'com.auth0.android:lock:2.2.1'
     implementation 'com.auth0.android:lock:2.14.1'
-    //implementation 'com.auth0.android:lock:2.11.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.auth0:java-jwt:2.1.0'
-    implementation 'com.google.ads.interactivemedia.v3:interactivemedia:3.9.4'
-    implementation ('com.spotxchange:spotx-sdk-android:3.2.+') {
-        transitive = false
-    }
-
-    implementation 'com.google.android.gms:play-services-ads:16.0.0'
-    implementation 'com.google.android.gms:play-services-base:16.0.1'
-    implementation 'com.google.android.gms:play-services-analytics:16.0.4'
-
-    implementation 'com.android.support:support-annotations:25.0.1'
-
-    implementation 'com.google.firebase:firebase-messaging:17.3.3'
-
-    implementation files('libs/aerserv-sdk.jar')
-    implementation files('libs/adcolony.jar')
-
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -93,9 +74,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
-
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-
     implementation 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'// (v4.5)
     implementation 'com.joanzapata.iconify:android-iconify-entypo:2.2.2'// (v3,2015)
     implementation 'com.joanzapata.iconify:android-iconify-typicons:2.2.2'// (v2.0.7)
@@ -105,39 +84,14 @@ dependencies {
     implementation 'com.joanzapata.iconify:android-iconify-weathericons:2.2.2'// (v2.0)
     implementation 'com.joanzapata.iconify:android-iconify-simplelineicons:2.2.2'// (v1.0.0)
     implementation 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2'// (v2.0.1)
-
-    implementation ('com.github.dotstudiopro:dotstudiopro-android-model:1.0.13')
-            {
-                exclude group: 'com.android.support'
-            }
-    implementation ('com.github.dotstudiopro:dotstudiopro-android-analytics:2.0.1')
-            {
-                exclude group: 'com.android.support'
-            }
-    // Service Lib
-    implementation ('com.github.dotstudiopro:dotstudiopro-android-services:1.0.37')
-            {
-                exclude group: 'com.android.support'
-                exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-model:1.0.13'
-            }
-
-    /*implementation ('com.github.dotstudiopro:dotstudiopro-android-player:1.0.43')
-            {
-                exclude group: 'com.android.support'
-                exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-analytics:2.0.0'
-                exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-services:1.0.36'
-                exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-model:1.0.13'
-            }*/
-
-}
-/*
-configurations.all {
-    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
-        def requested = details.requested
-        if (requested.group == 'com.android.support') {
-            if (!requested.name.startsWith("multidex")) {
-                details.useVersion '26.0.2'
-            }
-        }
+    implementation ('com.github.dotstudiopro:dotstudiopro-android-model:1.0.13') {
+        exclude group: 'com.android.support'
     }
-}*/
+    implementation ('com.github.dotstudiopro:dotstudiopro-android-analytics:2.0.1') {
+        exclude group: 'com.android.support'
+    }
+    implementation ('com.github.dotstudiopro:dotstudiopro-android-services:1.0.37') {
+        exclude group: 'com.android.support'
+        exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-model:1.0.13'
+    }
+}
