--- a/corelibrary/build.gradle
+++ b/corelibrary/build.gradle
@@ -8,8 +8,8 @@ android {
         multiDexEnabled true
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 87
-        versionName "2.0.6"
+        versionCode 88
+        versionName "2.0.7"
     }
     buildTypes {
         release {
@@ -87,9 +87,9 @@ dependencies {
     implementation ('com.github.dotstudiopro:dotstudiopro-android-model:1.0.13') {
         exclude group: 'com.android.support'
     }
-    implementation ('com.github.dotstudiopro:dotstudiopro-android-analytics:2.0.1') {
+    /*implementation ('com.github.dotstudiopro:dotstudiopro-android-analytics:2.0.1') {
         exclude group: 'com.android.support'
-    }
+    }*/
     implementation ('com.github.dotstudiopro:dotstudiopro-android-services:1.0.37') {
         exclude group: 'com.android.support'
         exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-model:1.0.13'
