--- a/corelibrary/build.gradle
+++ b/corelibrary/build.gradle
@@ -8,8 +8,8 @@ android {
         multiDexEnabled true
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 98
-        versionName "2.0.16"
+        versionCode 99
+        versionName "2.0.17"
     }
     buildTypes {
         release {
@@ -64,9 +64,9 @@ dependencies {
     implementation 'com.auth0.android:lock:2.14.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.auth0:java-jwt:2.1.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    //implementation 'com.android.support:appcompat-v7:28.0.0'
+    //implementation 'com.android.support:design:28.0.0'
+    //implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation('com.squareup.retrofit2:retrofit:2.1.0') {
         exclude module: 'okhttp'
     }
@@ -90,7 +90,7 @@ dependencies {
     /*implementation ('com.github.dotstudiopro:dotstudiopro-android-analytics:2.0.1') {
         exclude group: 'com.android.support'
     }*/
-    implementation ('com.github.dotstudiopro:dotstudiopro-android-services:1.0.57') {
+    implementation ('com.github.dotstudiopro:dotstudiopro-android-services:1.0.60') {
         exclude group: 'com.android.support'
         exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-model:1.0.16'
     }
