--- a/corelibrary/build.gradle
+++ b/corelibrary/build.gradle
@@ -8,8 +8,8 @@ android {
         multiDexEnabled true
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 111
-        versionName "2.0.29"
+        versionCode 112
+        versionName "2.0.30"
     }
     buildTypes {
         release {
@@ -61,7 +61,8 @@ dependencies {
     implementation files('libs/httpmime-4.3.6.jar')
     implementation files('libs/httpcore-4.4.3.jar')
     implementation files('libs/httpclient-4.5.1.jar')
-    implementation 'com.auth0.android:lock:2.14.1'
+    //implementation 'com.auth0.android:lock:2.14.1'
+    implementation 'com.github.dotstudiopro:dotstudiopro-android-lock:0.0.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.auth0:java-jwt:2.1.0'
     //implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -90,7 +91,7 @@ dependencies {
     /*implementation ('com.github.dotstudiopro:dotstudiopro-android-analytics:2.0.1') {
         exclude group: 'com.android.support'
     }*/
-    implementation ('com.github.dotstudiopro:dotstudiopro-android-services:1.0.72') {
+    implementation ('com.github.dotstudiopro:dotstudiopro-android-services:1.0.73') {
         exclude group: 'com.android.support'
         exclude group:'com.github.dotstudiopro', module: 'dotstudiopro-android-model:1.0.18'
     }
