--- a/corelibrary/build.gradle
+++ b/corelibrary/build.gradle
@@ -8,8 +8,8 @@ android {
         multiDexEnabled true
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 114
-        versionName "2.0.32"
+        versionCode 115
+        versionName "2.0.33"
     }
     buildTypes {
         release {
@@ -46,7 +46,7 @@ dependencies {
     //testCompile 'junit:junit:4.12'
 
     //compile 'com.android.support:appcompat-v7:23.3.0'
-    implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    //implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation files('libs/mfXerces.jar')
     implementation files('libs/YuMeAndroidSDK.jar')
     implementation 'com.daimajia.slider:library:1.1.5@aar'
