--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,11 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+        maven { url 'https://jitpack.io'
+            credentials {
+                username authToken
+            }
+        }
         maven {
             url 'https://maven.google.com/'
         }
